# gore_engine

./: .gitignore  CMakeLists.txt  README.md  level_creator.cpp  main.cpp
include/: test_instrumentor.h
include/core/: basic_logger.h  error_macros.h  game_state.h  gapi.h  gore.h  gorecore.h  gresource.h  input.h  log_medium.h  logger.h  platform_macros.h  renderer.h  resource_registry.h  timer.h  typedefs.h  window.h
include/core/window/: generic_window.h  glfw_window.h
include/gl/: buffer.h  constant_buffer.h  dynamic_buffer.h  framebuffer.h  globject.h  material.h  program.h  program_pipeline.h  shader.h  shader_storage_buffer.h  static_buffer.h  texture_pool.h  uniconstant_buffer.h  uniform_buffer.h  uniform_map.h  uniheap_buffer.h  vertex_array.h  vertex_attribute.h
include/memory/: buffer_storage.h  program_storage.h  render_data_storage.h  renderable_storage.h  texture_storage.h
include/physics/: collision_body.h  shape_collider_types.h  static_body.h
include/scene/: aabb.h  area.h  camera.h  constant_model.h  dynamic_model.h  level.h  light.h  mesh.h  model.h  model_instance.h  node.h  obb.h  octree.h  portal.h  scene.h  scene_node.h  scene_visual.h  spatial.h  static_model.h  transform.h
include/signal/: signal_layer.h  signal_queue.h  signal_types.h
include/util/: error_handler.h  file_system.h  level_editor.h  logger.h  platform.h  util.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  basic_logger.cpp  error_macros.cpp  game_state.cpp  gapi.cpp  input.cpp  log_medium.cpp  logger.cpp  renderer.cpp  timer.cpp  window.cpp
src/core/window/: glfw_window.cpp
src/gl/: buffer.cpp  constant_buffer.cpp  dynamic_buffer.cpp  globject.cpp  material.cpp  program.cpp  program_pipeline.cpp  shader.cpp  static_buffer.cpp  texture_pool.cpp  uniconstant_buffer.cpp  uniheap_buffer.cpp  vertex_array.cpp
src/memory/: buffer_storage.cpp  program_storage.cpp  render_data_storage.cpp  renderable_storage.cpp  texture_storage.cpp
src/physics/: collision_body.cpp  shape_types.cpp  static_body.cpp
src/scene/: aabb.cpp  area.cpp  camera.cpp  constant_model.cpp  dynamic_model.cpp  light.cpp  mesh.cpp  model.cpp  model_instance.cpp  scene_node.cpp  scene_visual.cpp  spatial.cpp  static_model.cpp
src/signal/: signal_layer.cpp  signal_queue.cpp
src/util/: error_handler.cpp  level_editor.cpp  logger.cpp  platform.cpp  util.cpp
test/: test  test.cpp  to
